# presto

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  COPYRIGHT  FAQ.md  INSTALL.md  README.md  RELEASE.md  ROADMAP.md  check_meson_build.py  determine_version.py  meson.build  pixi.toml
clig/: accelsearch_cmd.cli  bincand_cmd.cli  downsample_cmd.cli  mpiprepsubband_cmd.cli  prepdata_cmd.cli  prepfold_cmd.cli  prepfold_multi_cmd.cli  prepsubband_cmd.cli  readfile_cmd.cli  realfft_cmd.cli  rednoise_cmd.cli  rfifind_cmd.cli  search_bin_cmd.cli  show_pfd_cmd.cli  toas2dat_cmd.cli  zapbirds_cmd.cli
conda-recipe/: README.md  meta.yaml
docs/: accelsearch.1  bincand.1  downsample.1  mpiprepsubband.1  prepdata.1  prepfold.1  prepfold_multi.1  prepsubband.1  readfile.1  realfft.1  rednoise.1  rfifind.1  search_bin.1  show_pfd.1  toas2dat.1  zapbirds.1
examplescripts/: Dockerfile_presto5_png_ubuntu26.04.txt  ffdot_example.py  jerk_example.py
include/: accelsearch_cmd.h  backend_common.h  bincand_cmd.h  downsample_cmd.h  misc_utils.h  mpiprepsubband_cmd.h  prepdata_cmd.h  prepfold.h  prepfold_cmd.h  prepfold_multi_cmd.h  prepsubband_cmd.h  presto.h  readfile_cmd.h  realfft_cmd.h  rednoise_cmd.h  rfifind_cmd.h  search_bin_cmd.h  show_pfd_cmd.h  toas2dat_cmd.h  zapbirds_cmd.h
python/: accel_to_candlist.py  meson.build  pyproject.toml
python/fftfit_src/: fftfit_aarchiba.py  fftfit_methods.py  fftfit_py.py  gen_fftfit_reference.py  test_cprof.py  test_fftfit_hypothesis.py  test_fftfit_port.py  test_selector.py
python/presto/: _datadir.py  bestprof.py  binary_psr.py  cosine_rand.py  events.py  fftfit.py  fftfit_aarchiba.py  filterbank.py  harmonic_sum.py  infodata.py  injectpsr.py  meson.build  mpfit.py  parfile.py  polycos.py  prepfold.py  psr_utils.py  psrfits.py  pypsrcat.py  rfifind.py  sigproc.py  simple_roots.py  sinc_interp.py  spectra.py
python/presto/singlepulse/: rrattrap.py
python/presto_src/: __init__.py
src/: Makefile  accelsearch.c  accelsearch_cmd.c  backend_common.c  bary.c  barycenter.c  bincand.c  bincand_cmd.c  bpp.c  cal2mjd.c  check_bary_erfa.c  check_polycos_t2.c  database.c  datadir.c  downsample_cmd.c  fftcalls.c  ioinf.c  makedata.c  makeinf.c  makewisdom.c  maximize_rz.c  median.c  meson.build  minifft.c  misc_utils.c  mjd2cal.c  mpiprepsubband.c  mpiprepsubband_cmd.c  mpiprepsubband_utils.c  observatories.c  plotbincand.c  polycos.c  prepdata.c  prepdata_cmd.c  prepfold.c  prepfold_cmd.c  prepfold_multi.c  prepfold_multi_cmd.c  prepfold_pipeline.c  prepfold_plot.c  (+20 more)
subprojects/: erfa.wrap
tests/: bary_tempo_reference.txt  test_barycenter.py  test_ffts.c  test_maximize_rz.py  test_presto_python.py  test_transpose.c
tests/prepfold/: clean_test_output.sh  determinism_check.sh  multi_cands_grouped.txt  perf_check.sh  prepfold_multi_tests.sh  valgrind_check.sh
tests/prepfold/goodfolds/: Ter5_080912_bary_DM238.30_8.66ms_Cand.pfd  Ter5_080912_bary_DM238.30_8.66ms_Cand.pfd.bestprof  Ter5_080912_bary_DM238.30_ACCEL_Cand_2.pfd  Ter5_080912_bary_DM238.30_ACCEL_Cand_2.pfd.bestprof  Ter5_080912_bary_DM238.30_nosearch_8.66ms_Cand.pfd  Ter5_080912_bary_DM238.30_nosearch_8.66ms_Cand.pfd.bestprof  Ter5_080912_short2bits_8.66ms_Cand.pfd  Ter5_080912_short2bits_8.66ms_Cand.pfd.bestprof
